--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "基于树莓派的远程动力控制",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.16.2",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "express": "^4.16.2",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "rpio2": "^0.4.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {},
